--- a/Assets/CSS/stylesheet.css
+++ b/Assets/CSS/stylesheet.css
@@ -814,6 +814,127 @@ p
     End Packs Section
 */
 
+/*
+    Start Contact Section
+*/
+
+#contact .contact
+{
+    background-color: var(--darkBlue);
+    position: relative;
+}
+
+#contact .contact-wrapper
+{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    width: 85%;
+    margin: 150px 0 100px 0;
+    background-color: var(--lightBrown);
+    row-gap: 20px;
+    height: 80vh;
+}
+
+#contact .img-container
+{
+    width: 40%;
+    height: 130px;
+    position: relative;
+    transform: translateY(-30px);
+}
+#contact .img-container::before
+{
+    position: absolute;
+    content: '';
+    width: 120%;
+    height: 120%;
+    background-color: var(--lightBrown);
+    border-radius: 100%;
+    z-index: -1;
+    left: -10%;
+    top: -10%;
+}
+
+#contact .img-container img
+{
+    border-radius: 100%;
+}
+
+#contact h2
+{
+    color: var(--white);
+    font-size: 1.8rem;
+}
+
+#contact form
+{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 90%;
+    row-gap: 20px;
+    flex-wrap: wrap;
+}
+
+#contact form input[type=text],
+#contact form input[type=email]
+{
+    width: 100%;
+    height: 70px;
+    font-size: 1.3rem;
+    text-align: center;
+}
+
+#contact textarea
+{
+    width: 100%;
+    font-size: 1.3rem;
+    text-align: center;
+    padding-top: 10px;
+    resize: none;
+}
+
+#contact #form-button
+{
+    font-size: 2rem;
+    text-transform: uppercase;
+    padding: 1rem 1.5rem;
+    border-radius: 20px;
+    border: 3px solid var(--white);
+    background-color: var(--gray);
+    color: var(--white);
+    transition: 0.3s ease;
+    font-weight: 900;
+}
+
+#contact #form-button:hover
+{
+    background-color: var(--white);
+    color: var(--gray);
+}
+
+#contact form input[type=text]:focus,
+#contact form input[type=email]:focus,
+#contact textarea:focus
+{
+    outline-color: var(--black);
+}
+
+#contact h2,
+#contact form input[type=text],
+#contact form input[type=email],
+#contact textarea
+{
+    transform: translateY(-20px);
+}
+
+/*
+    End Contact Section
+*/
+
 /* 
     Start Media Query for Tablet 
 */
@@ -1142,6 +1263,104 @@ p
         End Packs Section
     */
 
+    /*
+        Start Contact Tablet
+    */
+
+    #contact .contact
+    {
+        min-height: 100vh;
+    }
+
+    #contact .contact-wrapper
+    {
+        width: 80%;
+        height: 70vh;
+    }
+
+    #contact .img-container
+    {
+        transform: translateY(-60px);
+        height: 200px;
+        width: 30%;
+    }
+
+    #contact h2
+    {
+        font-size: 2.5rem;
+    }
+
+    #contact form
+    {
+        width: 85%;
+    }
+
+    #contact form input[type=text],
+    #contact form input[type=email],
+    #contact textarea
+    {
+        font-size: 1.7rem;
+    }
+
+    #contact #form-button
+    {
+        padding: 1.3rem 3rem;
+    }
+
+    #contact h2,
+    #contact form input[type=text],
+    #contact form input[type=email],
+    #contact textarea
+    {
+        transform: translateY(-40px);
+    }
+
+    #contact .top-vertical,
+    #contact .top-horizontal,
+    #contact .bottom-vertical,
+    #contact .bottom-horizontal
+    {
+        position: absolute;
+        content: '';
+        background-color: var(--lightBrown);
+    }
+
+    #contact .top-vertical
+    {
+        width: 3px;
+        height: 20vh;
+        right: 5%;
+        top: 13%;
+    }
+
+    #contact .top-horizontal
+    {
+        width: 25%;
+        height: 3px;
+        top: 13%;
+        right: 5%;
+    }
+
+    #contact .bottom-vertical
+    {
+        width: 3px;
+        height: 15%;
+        left: 5%;
+        bottom: 5%;
+    }
+
+    #contact .bottom-horizontal
+    {
+        width: 70%;
+        height: 3px;
+        left: 5%;
+        bottom: 5%;
+    }
+
+    /*
+        End Contact Tablet
+    */
+
 }
 
 /* 
@@ -1467,6 +1686,86 @@ p
 
     /*
         End Packs Desktop
+    */
+
+    /*
+        Start Contact Desktop
+    */
+
+    #contact .contact-wrapper
+    {
+        width: 50%;
+        margin: 0;
+    }
+
+    #contact .img-container
+    {
+        width: 17%;
+        transform: translateY(-20px);
+    }
+
+    #contact h2
+    {
+        font-size: 2.5rem;
+    }
+
+    #contact form
+    {
+        row-gap: 20px;
+        flex-direction: row;
+        justify-content: center;
+        column-gap: 64px;
+    }
+
+    #contact form input[type=text],
+    #contact form input[type=email]
+    {
+        width: 45%;
+    }
+
+    #contact textarea
+    {
+        height: 200px;
+    }
+
+    #contact h2,
+    #contact form input[type=text],
+    #contact form input[type=email],
+    #contact textarea
+    {
+        transform: translateY(-20px);
+    }
+
+    #contact .top-vertical
+    {
+        height: 25vh;
+        right: 13%;
+        top: 10%;
+    }
+
+    #contact .top-horizontal
+    {
+        top: 10%;
+        right: 13%;
+        width: 30%;
+    }
+
+    #contact .bottom-vertical
+    {
+        left: 9%;
+        bottom: 4%;
+        height: 30%;
+    }
+
+    #contact .bottom-horizontal
+    {
+        left: 9%;
+        bottom: 4%;
+        width: 55%;
+    }
+
+    /*
+        End Contact Desktop
     */
 
 }
